tests/err_qty/trailing_mul.stderr
error: unexpected token
 --> tests/err_qty/trailing_mul.rs:5:27
  |
5 |     let _err = qty![1.0 m *];
  |                           ^
